--- a/getting_started.html
+++ b/getting_started.html
@@ -369,8 +369,8 @@ library(rgdal)</code></pre>
 found on NASA’s EMIT-Data-Resources <a href="https://github.com/nasa/EMIT-Data-Resources">Github</a>. The
 entire repository is worth checking out, but scripts are in python.</p>
 <p>For <strong>bulk download</strong> see the [NASA Earthdata Wiki] (<a href="https://wiki.earthdata.nasa.gov/display/EDSC/How+To%3A+Use+the+Download+Access+Script" class="uri">https://wiki.earthdata.nasa.gov/display/EDSC/How+To%3A+Use+the+Download+Access+Script</a>.)</p>
-<p>The one tile we will use in this tutorial can accessed here, or in
-the <strong>test_data</strong>:<br />
+<p>The one tile we will use in this tutorial can accessed here, or
+follow the link in the <strong>test_data</strong>:<br />
 <a href="https://data.lpdaac.earthdatacloud.nasa.gov/lp-prod-protected/EMITL2ARFL.001/EMIT_L2A_RFL_001_20230812T223333_2322415_006/EMIT_L2A_RFL_001_20230812T223333_2322415_006.nc"><strong>L2A
 reflectance</strong></a><br />
 <a href="https://data.lpdaac.earthdatacloud.nasa.gov/lp-prod-protected/EMITL2ARFL.001/EMIT_L2A_RFL_001_20230812T223333_2322415_006/EMIT_L2A_RFLUNCERT_001_20230812T223333_2322415_006.nc"><strong>Uncertainty</strong></a><br />
